@@ -17,6 +17,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -56,7 +57,8 @@ public class SecurityConfig {
         "/api/product/getAll",
         "/api/product/searchProduct",
             "/api/jobCategory",
-            "/api/company/**"
+            "/api/company/**",
+            "/api/search/**"
 
     };
 
@@ -89,7 +91,7 @@ public class SecurityConfig {
         // Cho phép các origin cụ thể cho API HTTP (KHÔNG dùng *)
         // Hoặc chỉ cho phép * nếu bạn chắc chắn API đó không gửi/nhận credentials
         // Nhưng nếu bạn gửi JWT, bạn nên liệt kê rõ ràng
-        config.setAllowedOrigins(Arrays.asList("http://localhost:63342", "http://localhost:3000", "http://your_frontend_domain.com"));
+        config.setAllowedOrigins(List.of("http://localhost:3000","http://152.42.199.139/**","http://152.42.199.139")); // Mở cho dev
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT","PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(Arrays.asList("*")); // Cho phép tất cả headers
         config.setAllowCredentials(true); // Rất quan trọng nếu bạn gửi cookie/auth header
